// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-icon-button should render disabled icon button 1`] = `
<wpp-icon-button class="wpp-icon-button" disabled="" exportparts="wrapper, inner">
  <mock:shadow-root>
    <wpp-button data-testid="wppIconButton" disabled="" part="wrapper" size="m" variant="secondary">
      <slot part="inner" slot="icon-start"></slot>
    </wpp-button>
  </mock:shadow-root>
  <wpp-icon-more class="wpp-icon wpp-icon-more" data-testid="wpp-icon-more" style="--wpp-prop-icon-color: var(--wpp-icon-color);">
    <mock:shadow-root>
      <svg aria-hidden="true" fill="none" height="20" role="presentation" viewBox="0 0 20 20" width="20">
        <path d="M6 10C6 11.1046 5.10457 12 4 12C2.89543 12 2 11.1046 2 10C2 8.89543 2.89543 8 4 8C5.10457 8 6 8.89543 6 10ZM12 10C12 11.1046 11.1046 12 10 12C8.89543 12 8 11.1046 8 10C8 8.89543 8.89543 8 10 8C11.1046 8 12 8.89543 12 10ZM16 12C17.1046 12 18 11.1046 18 10C18 8.89543 17.1046 8 16 8C14.8954 8 14 8.89543 14 10C14 11.1046 14.8954 12 16 12Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </wpp-icon-more>
</wpp-icon-button>
`;

exports[`wpp-icon-button should render icon button 1`] = `
<wpp-icon-button class="wpp-icon-button" exportparts="wrapper, inner">
  <mock:shadow-root>
    <wpp-button data-testid="wppIconButton" part="wrapper" size="m" variant="secondary">
      <slot part="inner" slot="icon-start"></slot>
    </wpp-button>
  </mock:shadow-root>
  <wpp-icon-more class="wpp-icon wpp-icon-more" data-testid="wpp-icon-more" style="--wpp-prop-icon-color: var(--wpp-icon-color);">
    <mock:shadow-root>
      <svg aria-hidden="true" fill="none" height="20" role="presentation" viewBox="0 0 20 20" width="20">
        <path d="M6 10C6 11.1046 5.10457 12 4 12C2.89543 12 2 11.1046 2 10C2 8.89543 2.89543 8 4 8C5.10457 8 6 8.89543 6 10ZM12 10C12 11.1046 11.1046 12 10 12C8.89543 12 8 11.1046 8 10C8 8.89543 8.89543 8 10 8C11.1046 8 12 8.89543 12 10ZM16 12C17.1046 12 18 11.1046 18 10C18 8.89543 17.1046 8 16 8C14.8954 8 14 8.89543 14 10C14 11.1046 14.8954 12 16 12Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </wpp-icon-more>
</wpp-icon-button>
`;

exports[`wpp-icon-button should render icon button with loading spinner and size m 1`] = `
<wpp-icon-button class="wpp-icon-button" exportparts="wrapper, inner" loading="" size="m">
  <mock:shadow-root>
    <wpp-button data-testid="wppIconButton" loading="" part="wrapper" size="m" variant="secondary">
      <slot part="inner" slot="icon-start"></slot>
    </wpp-button>
  </mock:shadow-root>
  <wpp-icon-more></wpp-icon-more>
</wpp-icon-button>
`;

exports[`wpp-icon-button should render icon button with size s 1`] = `
<wpp-icon-button class="wpp-icon-button" exportparts="wrapper, inner" size="s">
  <mock:shadow-root>
    <wpp-button data-testid="wppIconButton" part="wrapper" size="s" variant="secondary">
      <slot part="inner" slot="icon-start"></slot>
    </wpp-button>
  </mock:shadow-root>
  <wpp-icon-more class="wpp-icon wpp-icon-more" data-testid="wpp-icon-more" style="--wpp-prop-icon-color: var(--wpp-icon-color);">
    <mock:shadow-root>
      <svg aria-hidden="true" fill="none" height="20" role="presentation" viewBox="0 0 20 20" width="20">
        <path d="M6 10C6 11.1046 5.10457 12 4 12C2.89543 12 2 11.1046 2 10C2 8.89543 2.89543 8 4 8C5.10457 8 6 8.89543 6 10ZM12 10C12 11.1046 11.1046 12 10 12C8.89543 12 8 11.1046 8 10C8 8.89543 8.89543 8 10 8C11.1046 8 12 8.89543 12 10ZM16 12C17.1046 12 18 11.1046 18 10C18 8.89543 17.1046 8 16 8C14.8954 8 14 8.89543 14 10C14 11.1046 14.8954 12 16 12Z" fill="currentColor"></path>
      </svg>
    </mock:shadow-root>
  </wpp-icon-more>
</wpp-icon-button>
`;
